--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -104,13 +104,17 @@
 }
 
 .logo {
-  height: 1em;
   margin-left: 0.5rem;
+}
+
+.button {
+  margin: 1rem;
 }
 
 @media (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
+    margin: 1rem;
   }
 }
